--- a/style.css
+++ b/style.css
@@ -75,7 +75,71 @@ span {
   color: hsl(277, 64%, 61%);
 }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 375px) {
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 300px;
+  }
+  .wrapper {
+    display: flex;
+    background-color: hsl(244, 38%, 16%);
+    flex-direction: column;
+    height: auto;
+    flex-wrap: wrap;
+    margin-top: 20px;
+    justify-content: center;
+    margin: 50px;
+    border-radius: 10px;
+    text-align: center;
+  }
+  .image {
+    background-image: url("../images/image-header-mobile.jpg");
+    background-repeat: no-repeat;
+    position: relative;
+    width: 300px;
+    height: 200px;
+    object-fit: cover;
+    background-size: cover;
+    border-radius: 10px 10px 0 0;
+  }
+
+  .overlay {
+    position: absolute;
+    background-color: hsla(277, 64%, 61%, 0.5);
+    overflow: hidden;
+    height: 200px;
+    width: 300px;
+    border-radius: 10px 10px 0 0;
+  }
+  .content {
+    justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    width: 300px;
+  }
+  .stats {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .s1 {
+    margin: 15px;
+  }
+  h1 {
+    font-family: "Inter", sans-serif;
+    font-size: 30px;
+  }
+  p.des {
+    margin: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
   .container {
     display: flex;
     justify-content: center;
